Bug 360239 - Mixed Letters not really mixed
Summary: Mixed Letters not really mixed
Status: RESOLVED FIXED
Alias: None
Product: parley
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: parley bug tracker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-08 02:39 UTC by Julian Helfferich
Modified: 2016-04-03 19:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: Applications/16.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Julian Helfferich 2016-03-08 02:39:50 UTC
For the Mixed Letters practice, the letters comprising the correct answer are displayed. However, the vertical position of these letters vary, while they still appear in the correct order. Thus, the mixed letters practice consists mostly of copying the letters to the text-input field in the same order they appear.

I would expect the letters to be randomized. Or is this the intended behavior?

Version: 2.1.0 (current master)

Reproducible: Always

Steps to Reproduce:
1. Start "Mixed Letters" practice
2. Confirm that letters appear in correct order.
3.

Actual Results:  
The letters appear in the correct order every time.

Expected Results:  
The letters should be randomized.
Comment 1 Julian Helfferich 2016-04-03 19:35:33 UTC
Git commit 62ca441f7d4777a96c9950737793747c47da63ac by Julian Helfferich.
Committed on 03/04/2016 at 19:33.
Pushed by helfferich into branch 'Applications/16.04'.

Randomize letters in Mixed Letter mode

Before, the order of the letters was not randomize. I use
KRandomSequence to randomize the order of the letter.
FIXED-IN: Applications/16.04
REVIEW: 127505

M  +2    -2    src/practice/mixedlettersmodewidget.cpp
M  +3    -0    src/practice/mixedlettersmodewidget.h

http://commits.kde.org/parley/62ca441f7d4777a96c9950737793747c47da63ac