Randomize letters in Mixed Letter mode

Before, the order of the letters was not randomize. I use
KRandomSequence to randomize the order of the letter.

BUG: 360239
FIXED-IN: Applications/16.04
REVIEW: 127505